Fix spacing issue

--- a/src/styles/_b-collapsible.scss
+++ b/src/styles/_b-collapsible.scss
@@ -36,7 +36,7 @@
     margin-top: 0;
     padding-left: $space-xs !important;
 
-    .b-collapsible--small {
+    .b-collapsible--small .b-collapsible--small {
       padding-left: 0 !important;
     }
   }
